--- a/mnist_from_scratch.ipynb
+++ b/mnist_from_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "448c235a-daab-4939-bdd7-d20996a97d52",
    "metadata": {},
    "outputs": [
@@ -10,49 +10,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2025-08-09 20:12:51--  https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz\n",
-      "Resolving ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)... 3.5.27.237, 52.217.82.36, 3.5.25.106, ...\n",
-      "Connecting to ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)|3.5.27.237|:443... connected.\n",
+      "--2025-08-09 20:22:12--  https://ossci-datasets.s3.amazonaws.com/mnist/train-images-idx3-ubyte.gz\n",
+      "Resolving ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)... 54.231.137.217, 52.217.115.177, 52.217.9.236, ...\n",
+      "Connecting to ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)|54.231.137.217|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 9912422 (9.5M) [application/x-gzip]\n",
-      "Saving to: ‘train-images-idx3-ubyte.gz.1’\n",
+      "Saving to: ‘train-images-idx3-ubyte.gz’\n",
       "\n",
-      "train-images-idx3-u 100%[===================>]   9.45M  4.24MB/s    in 2.2s    \n",
+      "train-images-idx3-u 100%[===================>]   9.45M   696KB/s    in 16s     \n",
       "\n",
-      "2025-08-09 20:12:54 (4.24 MB/s) - ‘train-images-idx3-ubyte.gz.1’ saved [9912422/9912422]\n",
+      "2025-08-09 20:22:28 (617 KB/s) - ‘train-images-idx3-ubyte.gz’ saved [9912422/9912422]\n",
       "\n",
-      "--2025-08-09 20:12:54--  https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz\n",
-      "Resolving ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)... 16.15.176.183, 52.217.82.36, 3.5.25.106, ...\n",
-      "Connecting to ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)|16.15.176.183|:443... connected.\n",
+      "--2025-08-09 20:22:28--  https://ossci-datasets.s3.amazonaws.com/mnist/train-labels-idx1-ubyte.gz\n",
+      "Resolving ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)... 3.5.30.215, 52.217.112.73, 3.5.30.73, ...\n",
+      "Connecting to ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)|3.5.30.215|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 28881 (28K) [application/x-gzip]\n",
-      "Saving to: ‘train-labels-idx1-ubyte.gz.1’\n",
+      "Saving to: ‘train-labels-idx1-ubyte.gz’\n",
       "\n",
-      "train-labels-idx1-u 100%[===================>]  28.20K   132KB/s    in 0.2s    \n",
+      "train-labels-idx1-u 100%[===================>]  28.20K  --.-KB/s    in 0.1s    \n",
       "\n",
-      "2025-08-09 20:12:55 (132 KB/s) - ‘train-labels-idx1-ubyte.gz.1’ saved [28881/28881]\n",
+      "2025-08-09 20:22:29 (204 KB/s) - ‘train-labels-idx1-ubyte.gz’ saved [28881/28881]\n",
       "\n",
-      "--2025-08-09 20:12:55--  https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz\n",
-      "Resolving ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)... 16.182.34.193, 52.217.82.36, 16.182.74.25, ...\n",
-      "Connecting to ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)|16.182.34.193|:443... connected.\n",
+      "--2025-08-09 20:22:29--  https://ossci-datasets.s3.amazonaws.com/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Resolving ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)... 52.217.225.217, 52.217.112.73, 3.5.30.73, ...\n",
+      "Connecting to ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)|52.217.225.217|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 1648877 (1.6M) [application/x-gzip]\n",
-      "Saving to: ‘t10k-images-idx3-ubyte.gz.1’\n",
+      "Saving to: ‘t10k-images-idx3-ubyte.gz’\n",
       "\n",
-      "t10k-images-idx3-ub 100%[===================>]   1.57M   426KB/s    in 3.8s    \n",
+      "t10k-images-idx3-ub 100%[===================>]   1.57M   976KB/s    in 1.7s    \n",
       "\n",
-      "2025-08-09 20:13:00 (426 KB/s) - ‘t10k-images-idx3-ubyte.gz.1’ saved [1648877/1648877]\n",
+      "2025-08-09 20:22:32 (976 KB/s) - ‘t10k-images-idx3-ubyte.gz’ saved [1648877/1648877]\n",
       "\n",
-      "--2025-08-09 20:13:00--  https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Resolving ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)... 3.5.28.213, 52.217.82.36, 16.182.74.25, ...\n",
-      "Connecting to ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)|3.5.28.213|:443... connected.\n",
+      "--2025-08-09 20:22:32--  https://ossci-datasets.s3.amazonaws.com/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Resolving ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)... 16.182.38.89, 52.217.112.73, 52.217.11.156, ...\n",
+      "Connecting to ossci-datasets.s3.amazonaws.com (ossci-datasets.s3.amazonaws.com)|16.182.38.89|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 4542 (4.4K) [application/x-gzip]\n",
-      "Saving to: ‘t10k-labels-idx1-ubyte.gz.1’\n",
+      "Saving to: ‘t10k-labels-idx1-ubyte.gz’\n",
       "\n",
       "t10k-labels-idx1-ub 100%[===================>]   4.44K  --.-KB/s    in 0s      \n",
       "\n",
-      "2025-08-09 20:13:01 (16.0 MB/s) - ‘t10k-labels-idx1-ubyte.gz.1’ saved [4542/4542]\n",
+      "2025-08-09 20:22:33 (17.8 MB/s) - ‘t10k-labels-idx1-ubyte.gz’ saved [4542/4542]\n",
       "\n"
      ]
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "e9cd9651",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "ba38f9a0-e8a4-4c16-bf24-4f0736dd5cf4",
    "metadata": {},
    "outputs": [],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "67ea246a",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "eb3fddbc-ca38-4120-8cef-1553e803079f",
    "metadata": {},
    "outputs": [
@@ -154,10 +154,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x11797ad50>"
+       "<matplotlib.image.AxesImage at 0x1272fbd90>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "bd9efa67-5000-4191-8939-307cd75b99ae",
    "metadata": {},
    "outputs": [],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "6ef6226f-b91c-4b57-ab14-08710590bc93",
    "metadata": {},
    "outputs": [],
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "b806a109-e0f5-4b0e-97e5-bd62c6a5e83a",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "4049977d-aaa5-4f6e-a220-ecd292b19def",
    "metadata": {},
    "outputs": [],
@@ -395,14 +395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "ab7564b0-0906-4107-840e-7159131440e9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79a11b5265354f848346d95d8af22aa9",
+       "model_id": "c2170c865f034472b05a32ee572214bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -481,7 +481,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "mnist-mlp-from-scratch",
    "language": "python",
    "name": "python3"
   },
